--- a/style.css
+++ b/style.css
@@ -418,12 +418,26 @@ label #close {
 }
 .lastest-news__posts {
     width: 100%;
+    box-sizing: border-box;
+    padding: 4%;
 }
 .lastest-news__post-1 {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.lastest-news__post-2 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .lastest-news__images {
-    width: 100%;
+    width: 80%;
+
 }
 .lastest-news__images img {
     width: 100%;
@@ -556,4 +570,168 @@ label #close {
 }
 .copyright__links a:hover {
     color: #fff;
+}
+
+@media (min-width: 768px) {
+    .services {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+    }   
+    .card {
+        width: 45%;
+        margin: 2.5%;
+    }
+    .portfolio__heading {
+        margin-top: 5%;
+    }
+    .portfolio__heading-text {
+        padding: 0 18%;
+    }
+    .portfolio__images {
+        margin: 1rem auto;
+        width: 100%;
+        height: 820px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .portfolio__image {
+        width: 33.33%;
+        position: relative;
+        border-radius: 3px;
+        padding: 15px;
+        box-sizing: border-box;
+    }
+    .heading__sub-text {
+        padding: 0 18%;
+    }
+    .testimonial__scroll {
+        padding: 3% 7%;
+    }
+    .lastest-news__posts {
+        box-sizing: border-box;
+        padding: 2% 8%;
+    }
+    .lastest-news__post-1 {
+        flex-direction: row;
+    }
+    .lastest-news__images {
+        width: 100%;
+    }
+    .lastest-news__post-2 {
+        margin-top: 5%;
+        flex-direction: row-reverse;
+    }
+}
+
+@media (min-width: 992px) {
+    header {
+        justify-content: space-between;
+        padding: 2% 8%;
+    }
+    #hamburger{
+        display: none;
+    }
+    #close {
+        display: none;
+    }
+    .nav-menu {
+        top: 0;
+        left: 0;
+        width: 100%;
+        margin-top: 0;
+        font-weight: 300;
+        height: 100px;
+        overflow: hidden;
+        transition: all 0.7s;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+    .nav-menu ul li {
+        padding: 0.7em 1.5em;
+        display: inline;
+        box-sizing: border-box;
+    }
+    .nav-menu ul a {
+        display: inline;   
+        color: #000;
+        box-sizing: border-box;
+        padding-left: 0.3em;
+        padding-top: 0.2em;
+        padding-bottom: 0.2em;
+    }
+    .hero {
+        padding-top: 13%;
+        background-color: #f8f9fa;
+    }
+    .hero > h1 {
+        font-size: 60px;
+        text-align: center;
+        line-height: 85px;
+        letter-spacing: 6px;
+        color: #282828;
+    }
+    .services {
+        margin-top: 5%;
+    }
+    .card {
+        width: 21%;
+        margin: 2%;
+    }
+    .portfolio__heading-text {
+        padding: 0 26%;
+    }
+    .heading__sub-text {
+        padding: 0 26%;
+    }
+    .portfolio__images {
+        height: 1000px;
+    }
+    .portfolio__image {
+        width: 33.33%;
+        position: relative;
+        border-radius: 3px;
+        padding: 15px;
+        box-sizing: border-box;
+    }
+    .testimonial__scroll {
+        display: flex;
+        justify-content: space-between;
+    }
+    .testimonial__card {
+        margin: 2%;
+    }
+} 
+
+@media (min-width: 1200px) {
+    .portfolio__images {
+        height: 1200px;
+    }
+    .lastest-news__posts {
+        padding-left: 20% ;
+        padding-right: 20% ;
+    }
+    .lastest-news__images {
+        padding: 5%;
+    }
+    .footer {
+        display: flex;
+        padding-top: 9%;
+        padding-bottom: 9%;
+        justify-content: space-around;
+    }
+    .footer > div {
+        text-align: start;
+    }
+    .copyright {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .copyright__links {
+        margin: 0;
+    }
 }
