--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ label #close {
     width: 100%;
     padding-right: 10px;
     padding-left: 10px;
+    overflow: auto;
     box-sizing: border-box;
 }
 .portfolio__image {
